# zooo

./: .gitignore  README.md  export.pkl  ids.txt  pyproject.toml  test.py
src/zooo/: __init__.py
src/zooo/api/: __init__.py  error.py  utils.py
src/zooo/api/client/: __init__.py  _base.py  listed_profile.py  zoo.py
src/zooo/api/type/: __init__.py  _base.py  info.py  listed_profile.py  zoo.py
src/zooo/ui/: __init__.py
src/zooo/ui/tui/: __init__.py
