[project]
name = "zooo"
dynamic = ["version"]
description = "A Python wrapper around the https://gdcolon.com/zoo API + TUI for it"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pydantic>=2.11.7",
	"tcrutils>=13.1.37",
	"aiohttp>=3.12.13",
	"aiolimiter>=1.2.1",
	"rich>=14.0.0",
	"textual>=3.5.0",
	"arguably>=1.3.0",
]
license = { text = "GPL-3.0" }
authors = [{ name = "anamoyee" }]
maintainers = [{ name = "anamoyee" }]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: 3 :: Only",
	"Typing :: Typed",
	"Topic :: Utilities",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: Microsoft :: MS-DOS",
]

[project.scripts]
zooo = "zooo.ui:main"
zoo = "zooo.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/zooo/_version.py"
pattern = '__version__(?:: str)? *= *\"(?P<version>[^\"]+)\"'
